2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: background color setting feature in rsvg_convert program
	(#556969). Patch inspired by harobed (stephane%40harobed.org)
	* librsvg.def: Export 1 function necessary for the above
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: command-line tools can't handle UTF-8 encoded 
	filenames (#557036, reported by Tim Starling)
	* test-display.c: ditto
	
2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.4.

==================== 2.22.3 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.22.3

2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo.h: Make cairo render functions return a gboolean. Returns TRUE
	if the image can't be rendered
	* rsvg.c: Check && handle the return value
	* rsvg-cairo-render.c: Implement the above. Also, return FALSE if we're asked
	to render an ID that doesn't exist

	Collectively, fixes #540383 - rsvg_handle_render_cairo_sub - if ID not found, 
	return an error and/or dont render whole SVG
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-private.h: #539488 - migrate use of GMemChunk to GSlice, from Felix Riemann
	* rsvg-base.c: ditto
	* rsvg-styles.c: ditto
	* rsvg-cairo-render.c: ditto
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-text.c: #524835 - nautilus crashed with SIGSEGV
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>
	
	* gdk-pixbuf-loader/io-svg.c: #538149 - svg_loader.so does not set license field 
	in GdkPixBufFormat
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-filters.c: #548154 - Nautilus Segmentation fault when displaying SVG file
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* gdk-pixbuf-loader/io-svg.c: #549418 - build failure: test-display.c 
	io-svg.c format not a string literal and no format arguments
	* test-display.c: Ditto
	