@@ -1,5 +1,13 @@
 2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>
 
+	* rsvg-gobject.c: gdmgreeter segfault due to libxml2 API/ABI change
+	(#549087). Patch by Tom Parker (palfrey%40tevp.net). Untested against
+	libxml2 >= 2.7.0, but DV says "from the distance, that patch seems 
+	to do the right thing"
+	* rsvg-base.c: ditto
+
+2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>
+
 	* rsvg-convert.c: background color setting feature in rsvg_convert program
 	(#556969). Patch inspired by harobed (stephane%40harobed.org)
 	* librsvg.def: Export 1 function necessary for the above
